--- a/index_nojs.html
+++ b/index_nojs.html
@@ -75,7 +75,7 @@
 
 
     <footer>
-        <p>Algum problema que detectem, por favor deixar feedback <a target="_blank" href="https://github.com/luisnabais/luisnabais.com/issues">neste link</a>.</p>
+        <p>Algum problema que detectem, por favor deixar feedback <a target="_blank" href="https://github.com/luisnabais/luisnabais.github.io/issues">neste link</a>.</p>
         <p><small>Direitos do conteúdo do site e código fonte são reservados pela <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licença Creative Commons</a></small></p>
     </footer>
 </body>
