--- a/index.html
+++ b/index.html
@@ -66,45 +66,28 @@
                     <a target="_blank" href="https://linkedin.com/in/luisnabais"><span class="fa fa-linkedin fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://twitter.com/luis_nabais"><span class="fa fa-twitter fa-2x"></span></a>
+                    <a target="_blank" rel="me" href="https://mastodon.social/@luisnabais"><span class="fa fa-mastodon fa-2x"></a>
+                    <!--a target="_blank" href="https://medium.com/@luisnabais"><span class="fa fa-medium fa-2x"></span></a-->
+                </li>
+                <li>
+                    <a target="_blank" href="https://x.com/luis_nabais"><span class="fa fa-twitter fa-2x"></span></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://gitlab.com/luisnabais"><span class="fa fa-gitlab fa-2x"></span></a>
                 </li>
                 <li>
                     <a target="_blank" href="https://github.com/luisnabais"><span class="fa fa-github fa-2x"></span></a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://medium.com/@luisnabais"><span class="fa fa-medium fa-2x"></span></a>
-                </li>
-                <li>
-                    <a target="_blank" href="mailto:mail@luisnabais.com"><span class="fa fa-envelope fa-2x"></span></a>
                 </li>
             </ul>
         </section>
     </div>
 
-
     <footer>
         <p><span tkey="footer-feedback"></span><a target="_blank" href="https://github.com/luisnabais/luisnabais.github.io/issues"><span tkey="footer-feedback-link"></span></a>.</p>
         <p><small tkey="footer-rights"></a></small></p>
 
-        <p><small tkey="service-status"></small></a></p>
+        <!--p><small tkey="service-status"></small></a></p-->
     </footer>
-
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-54653325-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
