Fixed Mastodon icon (hopefully)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-static-top">
             <div class="container">
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li><a href="https://blog.luisnabais.com" target="_blank">Blog</a></li>-->
+                    <!--<li><a href="/blog" target="_blank">Blog</a></li>-->
                     <li id="language"><a id="flag_url" href="#"><img id="flag_lang" src="" /></a></li>
                 </ul>
             </div>
@@ -55,7 +55,6 @@
             <p tkey="whatido-desc"></p>
 
             <p tkey="alsodo-title"></p>
-            <div class="btn-wrapper"><a class="btn" href="mailto:mail@luisnabais.com" tkey="contactme"></a></div>
         </section>
 
         <section id="social">
@@ -66,11 +65,11 @@
                     <a target="_blank" href="https://linkedin.com/in/luisnabais"><span class="fa fa-linkedin fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" rel="me" href="https://mastodon.social/@luisnabais"><span class="fa fa-mastodon fa-2x"></a>
+                    <a target="_blank" rel="me" href="https://mastodon.social/@luisnabais"><span class="fa fa-mastodon fa-2x"></span></a>
                     <!--a target="_blank" href="https://medium.com/@luisnabais"><span class="fa fa-medium fa-2x"></span></a-->
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/luis_nabais"><span class="fa fa-twitter fa-2x"></span></a>
+                    <a target="_blank" href="https://x.com/luis_nabais"><span class="fa fa-x-twitter fa-2x"></span></a>
                 </li>
                 <li>
                     <a target="_blank" href="https://gitlab.com/luisnabais"><span class="fa fa-gitlab fa-2x"></span></a>
