Fixed font awesome classes

--- a/index.html
+++ b/index.html
@@ -62,20 +62,19 @@
             <p tkey="social-desc"></p>
             <ul class="social-links">
                 <li>
-                    <a target="_blank" href="https://linkedin.com/in/luisnabais"><span class="fa fa-linkedin fa-2x"></span></a>
+                    <a target="_blank" href="https://linkedin.com/in/luisnabais"><span class="fa-brands fa-linkedin fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" rel="me" href="https://mastodon.social/@luisnabais"><span class="fa fa-mastodon fa-2x"></span></a>
-                    <!--a target="_blank" href="https://medium.com/@luisnabais"><span class="fa fa-medium fa-2x"></span></a-->
+                    <a target="_blank" rel="me" href="https://mastodon.social/@luisnabais"><span class="fa-brands fa-mastodon fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/luis_nabais"><span class="fa fa-x-twitter fa-2x"></span></a>
+                    <a target="_blank" href="https://x.com/luis_nabais"><span class="fa-brands fa-x-twitter fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://gitlab.com/luisnabais"><span class="fa fa-gitlab fa-2x"></span></a>
+                    <a target="_blank" href="https://gitlab.com/luisnabais"><span class="fa-brands fa-gitlab fa-2x"></span></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://github.com/luisnabais"><span class="fa fa-github fa-2x"></span></a>
+                    <a target="_blank" href="https://github.com/luisnabais"><span class="fa-brands fa-github fa-2x"></span></a>
                 </li>
             </ul>
         </section>
